--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,10 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*Lista de Livros - Livro/Listagem*/
+#lst-vazia {
+  line-height: 54vh;
+  text-align: center;
+  background: #fff;
+}
