--- a/Views/Usuario/Cadastro.cshtml
+++ b/Views/Usuario/Cadastro.cshtml
@@ -31,5 +31,6 @@
         </div>
         
         <input type="submit" value="Salvar" class="btn btn-primary" />
+        <a asp-action="Listagem" class="btn btn-primary">Cancelar</a>
     </form>
 </div>
