Ajustes e Melhorias em geral para usabilidade

--- a/Views/Livro/Listagem.cshtml
+++ b/Views/Livro/Listagem.cshtml
@@ -57,6 +57,7 @@
                 }
             </tbody>
         </table>
+        <a class="btn btn-primary" asp-action="Cadastro">Novo Livro</a>
         <nav id="paginacao">
             <ul class="pagination justify-content-center">
                 @for (var p = 1; p <= pgTotal; p++)
