--- a/Views/Livro/_FormCadastro.cshtml
+++ b/Views/Livro/_FormCadastro.cshtml
@@ -15,5 +15,6 @@
             <input asp-for="Ano" required />
         </div>
         <input type="submit" value="Salvar" class="btn btn-primary"/>
+        <a asp-action="Listagem" class="btn btn-primary">Cancelar</a>
     </form>
 </div>
