--- a/Views/Emprestimo/Cadastro.cshtml
+++ b/Views/Emprestimo/Cadastro.cshtml
@@ -38,5 +38,6 @@
             </div>
         </fieldset>
         <input type="submit" value="Salvar" class="btn btn-primary"/>
+        <a asp-action="Listagem" class="btn btn-primary">Cancelar</a>
     </form>
 </div>
